--- a/pg1.css
+++ b/pg1.css
@@ -14,6 +14,7 @@ body
 }
 
 .mid{
+    
         display: block;
         width: 56%;
         margin: 29px auto;
@@ -32,15 +33,19 @@ body
 }
 
 .navbar li{
+    font-family: 'Bebas Neue', cursive;
     display: inline-block;
 }
 
 .navbar a{
+
     padding-top: 20px;
-    font-size: 25px;
+    font-size: 35px;
     padding: 20px;
     text-decoration: none;
     color: aliceblue;
+    font-family: 'Bebas Neue', cursive;
+    
 }
 
 .navbar a:hover{
@@ -60,4 +65,38 @@ body
 
 .btn:hover{
     background-color: rgb(31, 30, 30);
+}
+.container{
+    margin-left: 40px;
+    padding-left: 100px;
+    color: aliceblue;
+    border: 2px solid white;
+    height: 270px;
+    margin-top: 200px;
+    width: 450px;
+    border-radius: 30px;
+}
+
+.form-group
+{
+    padding-left: 60px;
+    height: 25px;
+    
+}
+.Submit{
+    margin: 0px 9px;
+    background-color: black;
+    color: white;
+    padding: 4px 14px;
+    border: 2px solid grey;
+    border-radius: 10px;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-left: 100px;
+}
+
+.intro{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
 }
